# AI-FACTORY

./: .env.example  .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  seed_db.py  seed_db_final.py  seed_db_fixed.py  test_reddit_quick.py  validate_phase5a.py  verify_db.py  verify_hunter.py  verify_hunters.py  verify_opp.py
.hermes/plans/: 2026-05-18_neurotrend-ai-factory.md  2026-05-19_phase5a-data-feedback-loop.md
backend/: .env.example  Dockerfile  __init__.py  main.py  pytest.ini  requirements.txt
backend/api/: analytics.py  auth.py  deploy.py  health.py  notify.py  opportunities.py  optimizer.py  platform_login.py  projects.py  publish.py  settings.py  stats.py  tasks.py  trends.py  video_projects.py  workspace.py  ws.py
backend/core/: executor.py  face_swap.py  gatekeeper.py  git_manager.py  llm.py  notifier.py  orchestrator.py  planner.py  qqbot_notifier.py  reviewer.py  smart_swap.py  templates.py  tester.py  webhook.py
backend/db/: init_db.py  session.py
backend/models/: __init__.py  auth.py  base.py  engagement.py  optimization.py  platform_session.py  project.py  publish.py  trend.py  video.py
backend/tests/: conftest.py  test_analytics_feedback.py  (+6 more)
docs/: platform-api-setup.md
frontend/: Dockerfile  package-lock.json  package.json
scripts/: find_best_reference_frames.py  notify_test.py  seed_opportunities.py
workspace/354bca21-8158-4ec4-9f88-7e4e8fe4ac83/: pyproject.toml
workspace/354bca21-8158-4ec4-9f88-7e4e8fe4ac83/src/: todos.py
workspace/354bca21-8158-4ec4-9f88-7e4e8fe4ac83/tests/: conftest.py  test_todos.py
(+106 files in other folders)
