[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "todo-cli"
version = "1.0.0"
description = "A simple CLI todo manager"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
todo = "src.todos:main"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
